<resources>
    <string name="app_name">Dota Match Simulator</string>
    <string name="game">Game</string>
    <string name="multipleer">Multipleer</string>
    <string name="menu_info">Info</string>
    <string name="how_to_play">How to play</string>
    <string name="hero_statistics">Hero Stats</string>
    <string name="hero">Hero</string>
    <string name="late_game">Late Game</string>
    <string name="fighting">Fighting</string>
    <string name="lainning">Early Game</string>
    <string name="host">Host</string>
    <string name="connect_to_host">Connect to host</string>
    <string name="start_host">Start Host</string>
    <string name="waiting_for_players">Waiting for Player</string>
    <string name="enter_ip_address">Enter Ip Address...</string>

    <string name="assign_heroes_to_lines">Assign heroes along the lines</string>
    <string name="assign">Assign</string>
    <string name="hide">Hide</string>
    <string name="match_is_over">Match is over</string>
    <string name="quit">Quit</string>

    <string name="you_win">You Win</string>
    <string name="you_lose">You Lose</string>
    <string name="draw">Draw</string>
    <string name="you_ip_is">your ip address is %s</string>

    <string name="banned">Banned</string>
    <string name="your_turn">Your turn</string>
    <string name="enemy_turn">Enemy\'s turn</string>
    <string name="game_start_after">Game start after %d</string>
    <string name="already_picked">Already picked</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="achievements">Achievements</string>
    <string name="about">About the project</string>

    <string name="part_1">The game begins with a picks and bans of heroes. Each hero has three characteristics:\n- Early Game\n- Fighting\n- Late Game\n
    Characteristics of heroes can be found in the hero statistics tab.</string>
    <string name="part_2">After the picks, the match starts. You can place your heroes in three lines:\n- Top\n- Mid\n- Bottom\n</string>
    <string name="part_3">On each line, the battle is calculated:\nIn the time interval from 0 to 18 minutes, the characteristic Early game is taken into account.
    \nIn the time interval from 18 to 36 minutes, the characteristic Fighting game is taken into account.
    \nIn the time interval from 36 minutes to the end of the game, the Late Game characteristic is taken into account.</string>
    <string name="part_4">The characterization of heroes taken into account in one line is added up and compared with the sum of the opponent’s characteristics.
        On whose side the sum is greater, he wins the line.</string>
    <string name="part_5">How is the battle calculated?</string>
    <string name="part_6">Let parameter N - be the number of heroes on the line of the team which has a larger sum of characteristics.</string>
    <string name="part_7">Then if the difference between the sums of the characteristics is less than or equal\n   10+ (N-1) * 15, \nboth sides do the kill.</string>
    <string name="part_8">Otherwise, if the difference is less than or equal\n   15+ (N-1) * 20, \nonly the side with the largest amount of characteristics makes the kill.\n
        If the difference is greater, then the building is also destroyed.\n
    To stop the team push on one side, +20 and +50 are added to the formulas, respectively, if you send all your heroes to the same line. Therefore, it is not advisable.\n
    If no hero comes to the line on one side, and at least one comes on the other, the building is destroyed.\n
    The game continues until the Ancient is destroyed.</string>
    <string name="part_9">Examples:</string>
    <string name="part_10">1. If the line comes Alchemist vs Bristleback, then for the characteristics of the Early Game, the difference between them will be 15,
        so the Bristleback will do the kills, but will not destroy the tower.</string>
    <string name="part_11">2. If the line comes Beastmaster and Clockwerk vs Spectre and Dazzle, then for the characteristics of the Early Game, the difference between them will be 40,
        so the Beastmaster and Clockwerk will do the kills, and will destroy the tower.</string>
    <string name="how_to_connect">How to connect</string>
    <string name="connect_1">To connect to the multiplayer, both players must be connected to the local wifi network (in other words, to one wifi router).
    One player must become the host, and the other connect to it.</string>
    <string name="connect_2">To become a host you need to click start host and tell your IP address to another player.</string>
    <string name="connect_3">To connect to a host, enter the host IP address and click connect to host.</string>
    <string name="connect_4">After that, enjoy the game.</string>

    <string-array name="lineList">
        <item>Top</item>
        <item>Mid</item>
        <item>Bot</item>
    </string-array>

    <string-array name="modernlineList">
        <item>Top</item>M
        <item>Mid</item>
        <item>Bot</item>
        <item>Forest</item>
        <item>Triangle</item>
        <item>Enemy Forest</item>
        <item>Enemy Triangle</item>
        <item>Rosh</item>
    </string-array>

    <string name="app_id" translatable="false">937942289539</string>
    <string name="achieve_1" translatable="false">CgkIg5nejaYbEAIQAQ</string>
    <string name="achieve_2" translatable="false">CgkIg5nejaYbEAIQAg</string>
    <string name="achieve_3" translatable="false">CgkIg5nejaYbEAIQAw</string>
    <string name="achieve_4" translatable="false">CgkIg5nejaYbEAIQBA</string>
    <string name="achieve_5" translatable="false">CgkIg5nejaYbEAIQBQ</string>

    <string name="about_text">The game was created as a simulation of a Dota 2 game match for playing on a local network. All suggestions and suggestions regarding the game and statistics can be sent to mikle.samarkin@gmail.com.
    \n\n\nCreation - Miklesam,
    \nStatistics - Nanosok.</string>
</resources>
