<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/card_back">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertival_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_connect"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:id="@+id/how_header"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect_1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/how_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertival_half"
            app:layout_constraintBottom_toBottomOf="@+id/image_1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/image_1"
            android:src="@drawable/connect_ima_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/vertival_half"
            app:layout_constraintTop_toBottomOf="@+id/how_header" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/image_2"
            android:src="@drawable/host_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertival_half"
            app:layout_constraintTop_toBottomOf="@+id/image_1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect_2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/image_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertival_half"
            app:layout_constraintBottom_toBottomOf="@+id/image_2"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/image_3"
            android:src="@drawable/connect_to_host"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertival_half"
            app:layout_constraintTop_toBottomOf="@+id/image_2" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect_3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/image_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertival_half"
            app:layout_constraintBottom_toBottomOf="@+id/image_3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect_4"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/image_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>