<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/how_to_connect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@string/how_to_connect"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/host_bttn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@string/host"
            app:layout_constraintTop_toBottomOf="@+id/how_to_connect"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connect_to_host"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@string/connect_to_host"
            app:layout_constraintTop_toBottomOf="@+id/host_bttn"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.constraintlayout.widget.ConstraintLayout>